fix(unsub-modal): loading pulse not showing anymore

--- a/src/components/modal/unsub-modal/unsub-image.module.scss
+++ b/src/components/modal/unsub-modal/unsub-image.module.scss
@@ -11,41 +11,6 @@
   display: none;
 }
 
-.image-loading {
-  display: block;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  animation: pulse 1s ease-in-out infinite;
-  transform: scale(1);
-  position: absolute;
-}
-
-.loading-overlay {
-  position: absolute;
-  right: 0;
-  left: 0;
-  top: 0;
-  bottom: 0;
-  background-color: rgba(255, 255, 255, 0.7);
-  z-index: 10;
-  opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.65, 0.05, 0.36, 1),
-    transform 250ms cubic-bezier(0.65, 0.05, 0.36, 1);
-  &:after {
-    content: '';
-    display: block;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    animation: pulse 1s ease-in-out infinite;
-    transform: scale(1) translate(-50%, -50%);
-    position: absolute;
-    top: 50%;
-    left: 50%;
-  }
-}
-
 .image-error {
   margin: 0 auto;
   width: 50%;
